# luwak

./: .gitignore  AGENTS.md  DESIGN.md  README.md  luwak.yaml  luwak.yaml.example  package.json  tsconfig.json
.github/workflows/: build-desktop.yml  desktop-ci.yml
.smoke/: drive-m5.ts  drive-openai.ts  drive.ts  echo-openai.ts  echo.ts  luwak.yaml
docs/: GUIDE.md
public/: desktop-loading.html  index.html
scripts/: build-portable.mjs  build-sidecar.mjs
src/: ca.ts  config.ts  db.ts  index.ts  live.ts  model.ts  normalize.ts  proxy.ts  redact.ts  sse.ts  threading.ts  transparent.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs  tray.rs
src/adapters/: anthropic.ts  index.ts  openai.ts  types.ts
src/translate/: anthropic-openai.ts
test/: proxy.translate.test.ts  translate.test.ts
