[package]
name = "luwak-desktop"
version = "0.1.0"
description = "Luwak desktop application"
edition = "2021"

[lib]
name = "luwak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "luwak-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
